--- a/core/src/main/resources/templates/submit.html
+++ b/core/src/main/resources/templates/submit.html
@@ -80,18 +80,7 @@
 
 
 
-        <div class="ui  pagination menu">
-          <a class="icon item">
-            <i class="left chevron icon"></i>
-          </a>
-          <a class="item">1</a>
-          <a class="item">2</a>
-          <a class="item">3</a>
-          <a class="item">4</a>
-          <a class="icon item">
-            <i class="right chevron icon"></i>
-          </a>
-        </div>
+       <!-- <my-pager></my-pager> -->
 
       </div>
     </template>
