--- a/core/src/main/resources/templates/topic.html
+++ b/core/src/main/resources/templates/topic.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,6 +14,7 @@
   <script src="/js/util.js"></script>
   <script src="/js/components.js"></script>
 </head>
+
 <body>
 
   <div id="app">
@@ -22,36 +24,36 @@
 
       <!-- viewClass开始 -->
       <template>
-          <h1 class="ui header">目录</h1>
-          <div class="ui cards">
-            <div v-for="item in list2" class="card">
-              <div class="content">
-                <div class="header"> {{item.class_name}}</div>
-                <div class="meta">{{item.tot_topic}}个作业</div>
-                <div v-if="item.lastest_topic_id!=null" class="description">最新
-                  <a :href="'/topic/'+item.lastest_topic_id">{{item.lastest_topic_title}}</a>
-                </div>
-                <div v-if="item.lastest_topic_id==null" class="description">无最新作业
-                </div>
+        <h1 class="ui header">目录</h1>
+        <div class="ui cards">
+          <div v-for="item in list2" class="card">
+            <div class="content">
+              <div class="header"> {{item.class_name}}</div>
+              <div class="meta">{{item.tot_topic}}个作业</div>
+              <div v-if="item.lastest_topic_id!=null" class="description">最新
+                <a :href="'/topic/'+item.lastest_topic_id">{{item.lastest_topic_title}}</a>
+              </div>
+              <div v-if="item.lastest_topic_id==null" class="description">无最新作业
               </div>
             </div>
           </div>
+        </div>
       </template>
-     <!-- viewClass结束 -->
+      <!-- viewClass结束 -->
 
 
-     <view-loader v-if='loading'></view-loader>
+      <view-loader v-if='loading'></view-loader>
 
 
-     <!-- viewdata开始 -->
+      <!-- viewdata开始 -->
       <template v-if='!loading'>
 
-          <h1 class="ui header">所有作业</h1>
-          <div class="ui fluid action input">
-            <input type="text" placeholder="Search..." />
-            <div class="ui primary button">搜索</div>
-          </div>
-          <br/>
+        <h1 class="ui header">所有作业</h1>
+        <div class="ui fluid action input">
+          <input type="text" placeholder="Search..." />
+          <div class="ui primary button">搜索</div>
+        </div>
+        <br/>
         <table class="ui  striped table">
           <thead>
             <tr>
@@ -76,18 +78,7 @@
           </tbody>
         </table>
 
-        <div class="ui  pagination menu">
-          <a class="icon item">
-            <i class="left chevron icon"></i>
-          </a>
-          <a class="item">1</a>
-          <a class="item">2</a>
-          <a class="item">3</a>
-          <a class="item">4</a>
-          <a class="icon item">
-            <i class="right chevron icon"></i>
-          </a>
-        </div>
+        <!-- <my-pager></my-pager> -->
       </template>
       <!-- viewdata结束 -->
 
@@ -99,7 +90,7 @@
 
 
 
-  
+
 
   <script>
 
