删除多余静态文件

--- a/core/src/main/resources/templates/master.html
+++ b/core/src/main/resources/templates/master.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>管理后台</title>
   <link rel="stylesheet" type="text/css" href="/lib/semantic-ui/semantic.min.css" />
-  <link rel="stylesheet" type="text/css" href="/lib/semantic-ui-calendar/calendar.min.css" />
+  <!-- <link rel="stylesheet" type="text/css" href="/lib/semantic-ui-calendar/calendar.min.css" /> -->
   <script src="/lib/jquery-3.2.1.min.js"></script>
   <script src="/lib/semantic-ui/semantic.min.js"></script>
   <script src="/lib/semantic-ui-calendar/calendar.min.js" charset="utf-8"></script>
